--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "prefab_converter"
+name = "asset_migrator"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "zCubed",
+    "notnotswipez"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
